--- a/example.ipynb
+++ b/example.ipynb
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "7aa69b18",
    "metadata": {},
    "outputs": [],
@@ -37,8 +37,14 @@
     "lon = 7.76\n",
     "cutoffSec = [1800, 3600, 5400]\n",
     "date_time = datetime.datetime(2022, 5, 20, 16, 0)\n",
+    "ssl = False\n",
+    "hostname = \"localhost\"\n",
+    "port = 8080\n",
+    "router = \"main\"\n",
     "\n",
-    "output = calculate_isochrones(lat, lon, cutoffSec, date_time)"
+    "output = calculate_isochrones(\n",
+    "    lat, lon, cutoffSec, date_time, ssl, hostname, port, router\n",
+    ")"
    ]
   },
   {
