docs: update example notebook
Issue(s): #8

--- a/example.ipynb
+++ b/example.ipynb
@@ -23,12 +23,11 @@
     "from matplotlib import pyplot as plt\n",
     "from matplotlib import colors as colors\n",
     "import datetime\n",
-    "import numpy as np\n",
-    "import geopandas as gpd\n",
     "import contextily as ctx\n",
     "\n",
     "\n",
-    "from isochrones.isochrones import calculate_isochrones, intersect_isochrones"
+    "from isochrones.isochrones import calculate_isochrones, intersect_isochrones\n",
+    "from isochrones.pois import get_osm_features"
    ]
   },
   {
@@ -38,18 +37,94 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "lat = 46.20730\n",
+    "# Define parameters\n",
+    "lat = 46.20730  # Charmilles, Geneva\n",
     "lon = 6.12686\n",
-    "cutoffSec = [1800, 3600, 5400]\n",
+    "cutoffSec = [1800, 3600, 5400]  # 30, 60, 90 minutes\n",
     "date_time = datetime.datetime(2022, 5, 20, 16, 0)\n",
     "ssl = False\n",
     "hostname = \"localhost\"\n",
     "port = 8080\n",
     "router = \"ara_geneve_graphe_diff_vitesse\"\n",
     "\n",
+    "# POI parameters\n",
+    "bounding_box = (\n",
+    "    lon - 0.3,\n",
+    "    lat - 0.3,\n",
+    "    lon + 0.3,\n",
+    "    lat + 0.3,\n",
+    ")\n",
+    "\n",
+    "# bounding_box = (\n",
+    "#     5.882835,\n",
+    "#     46.068877,\n",
+    "#     6.337395,\n",
+    "#     46.325682,\n",
+    "# )  # from bbxofinder.com, Collonges - Fillinges, Cessy - La roche sur Foron\n",
+    "\n",
+    "tags = {\n",
+    "    \"amenity\": True,\n",
+    "    \"healthcare\": True,\n",
+    "    \"office\": True,\n",
+    "    \"public_Transport\": True,\n",
+    "    \"shop\": True,\n",
+    "    \"tourism\": True,\n",
+    "}\n",
+    "\n",
+    "# Isochrone styling\n",
+    "isochrone_colors = {\n",
+    "    1800: {\"color\": \"#440154\", \"label\": \"30 min\"},\n",
+    "    3600: {\"color\": \"#21918c\", \"label\": \"60 min\"},\n",
+    "    5400: {\"color\": \"#fde725\", \"label\": \"90 min\"},\n",
+    "}\n",
+    "\n",
+    "# Additional POI styling\n",
+    "poi_categories = {\n",
+    "    \"amenity\": {\"color\": \"red\", \"label\": \"Amenities\"},\n",
+    "    \"healthcare\": {\"color\": \"blue\", \"label\": \"Healthcare\"},\n",
+    "    \"office\": {\"color\": \"green\", \"label\": \"Offices\"},\n",
+    "    \"public_Transport\": {\"color\": \"purple\", \"label\": \"Public Transport\"},\n",
+    "    \"shop\": {\"color\": \"orange\", \"label\": \"Shops\"},\n",
+    "    \"tourism\": {\"color\": \"brown\", \"label\": \"Tourism\"},\n",
+    "}\n",
+    "\n",
     "# Create a normalized colormap based on cutoffSec values\n",
     "norm = colors.Normalize(vmin=min(cutoffSec), vmax=max(cutoffSec))\n",
     "cmap = plt.cm.viridis"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "17baf6aa",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "colors.rgb2hex([0.993248, 0.906157, 0.143936])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "83d2c2ae",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "isochrone_colors = {\n",
+    "    1800: {\"color\": \"#440154\", \"label\": \"30 min\"},\n",
+    "    3600: {\"color\": \"#21918c\", \"label\": \"60 min\"},\n",
+    "    5400: {\"color\": \"#fde725\", \"label\": \"90 min\"},\n",
+    "}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "79bb32f8",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "cmap(norm(cutoffSec))"
    ]
   },
   {
@@ -67,22 +142,21 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "babd4310",
+   "id": "69e7d592",
    "metadata": {},
    "outputs": [],
    "source": [
-    "fig, ax = plt.subplots(figsize=(10, 10))\n",
-    "\n",
-    "output.plot(\n",
-    "    ax=ax, column=\"time\", alpha=0.5, legend=True, cmap=\"viridis\", facecolor=\"none\"\n",
-    ")\n",
-    "\n",
-    "ctx.add_basemap(\n",
-    "    ax,\n",
-    "    source=ctx.providers.OpenStreetMap.CH,\n",
-    "    attribution=\"© OpenStreetMap contributors\",\n",
-    "    zoom=12,\n",
-    ")"
+    "output.crs = \"EPSG:4326\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c3f6d2aa",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "output.total_bounds"
    ]
   },
   {
@@ -92,31 +166,82 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def plot_with_basemap(gdf, random_points=None, figsize=(15, 15), zoom=12):\n",
+    "def plot_with_basemap(gdf, pois=None, figsize=(15, 15), zoom=12, crs=\"EPSG:3857\"):\n",
     "    # Convert to Web Mercator for contextily\n",
-    "    gdf_web = gdf.to_crs(epsg=3857)\n",
+    "    gdf_web = gdf.to_crs(crs)\n",
     "\n",
     "    # Create figure\n",
     "    fig, ax = plt.subplots(figsize=figsize)\n",
     "\n",
-    "    # Plot isochrones\n",
-    "    gdf_web.plot(ax=ax, column=\"time\", alpha=0.5, legend=True, cmap=\"viridis\")\n",
+    "    # Store handles for legends\n",
+    "    iso_handles = []\n",
+    "    poi_handles = []\n",
     "\n",
-    "    # Plot random points if provided\n",
-    "    if random_points is not None:\n",
-    "        random_points_web = random_points.to_crs(epsg=3857)\n",
-    "        random_points_web.plot(ax=ax, color=\"red\", markersize=5)\n",
+    "    # Plot isochrones with categorical colors\n",
+    "    for time, style in isochrone_colors.items():\n",
+    "        mask = gdf_web[\"time\"] == time\n",
+    "        if mask.any():\n",
+    "            gdf_web[mask].plot(ax=ax, color=style[\"color\"], alpha=0.5)\n",
+    "            iso_handles.append(\n",
+    "                plt.Rectangle(\n",
+    "                    (0, 0), 1, 1, fc=style[\"color\"], alpha=0.5, label=style[\"label\"]\n",
+    "                )\n",
+    "            )\n",
     "\n",
+    "    # Plot POIs with categorical colors\n",
+    "    if pois is not None:\n",
+    "        pois_web = pois.to_crs(crs)\n",
+    "        for category, style in poi_categories.items():\n",
+    "            cat_pois = pois_web[pois_web[\"variable\"] == category]\n",
+    "            if not cat_pois.empty:\n",
+    "                cat_pois.plot(\n",
+    "                    ax=ax, color=style[\"color\"], marker=\"o\", markersize=5, alpha=0.7\n",
+    "                )\n",
+    "                poi_handles.append(\n",
+    "                    plt.Line2D(\n",
+    "                        [0],\n",
+    "                        [0],\n",
+    "                        marker=\"o\",\n",
+    "                        color=style[\"color\"],\n",
+    "                        markersize=8,\n",
+    "                        linestyle=\"\",\n",
+    "                        label=style[\"label\"],\n",
+    "                    )\n",
+    "                )\n",
+    "\n",
+    "    # Add basemap\n",
     "    ctx.add_basemap(\n",
     "        ax,\n",
     "        crs=gdf_web.crs.to_string(),\n",
     "        source=ctx.providers.SwissFederalGeoportal.NationalMapColor,\n",
-    "        attribution=\"© OpenStreetMap contributors\",\n",
     "        zoom=zoom,\n",
     "    )\n",
     "\n",
-    "    # Remove axes\n",
-    "    # ax.set_axis_off()\n",
+    "    # Set bounds and remove axes\n",
+    "    minx, miny, maxx, maxy = gdf_web.total_bounds\n",
+    "    ax.set_xlim(minx, maxx)\n",
+    "    ax.set_ylim(miny, maxy)\n",
+    "    ax.set_axis_off()\n",
+    "\n",
+    "    # Add dual legends\n",
+    "    if iso_handles:\n",
+    "        first_legend = ax.legend(\n",
+    "            handles=iso_handles,\n",
+    "            title=\"Travel Time\",\n",
+    "            loc=\"upper left\",\n",
+    "            frameon=True,\n",
+    "            framealpha=0.8,\n",
+    "        )\n",
+    "        ax.add_artist(first_legend)\n",
+    "\n",
+    "    if poi_handles:\n",
+    "        ax.legend(\n",
+    "            handles=poi_handles,\n",
+    "            title=\"Points of Interest\",\n",
+    "            loc=\"upper right\",\n",
+    "            frameon=True,\n",
+    "            framealpha=0.8,\n",
+    "        )\n",
     "\n",
     "    return fig, ax"
    ]
@@ -129,67 +254,58 @@
    "outputs": [],
    "source": [
     "# Create plot with base layer\n",
-    "fig, ax = plot_with_basemap(output)\n",
+    "fig, ax = plot_with_basemap(output, zoom=14)\n",
     "plt.show()"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2b2e9380",
+   "id": "8d5df15a",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Randomly sample points within the bounding box of the isochrones\n",
-    "# Set the seed\n",
-    "np.random.seed(81)\n",
-    "\n",
-    "n_points = 200\n",
-    "minx, miny, maxx, maxy = output.total_bounds\n",
-    "random_points = gpd.GeoDataFrame(\n",
-    "    geometry=gpd.points_from_xy(\n",
-    "        np.random.uniform(minx, maxx, n_points), np.random.uniform(miny, maxy, n_points)\n",
-    "    )\n",
-    ")\n",
-    "\n",
-    "fig, ax = plt.subplots(figsize=(10, 10))\n",
-    "output.plot(ax=ax, column=\"time\", alpha=0.5, legend=True, cmap=cmap)\n",
-    "random_points.plot(ax=ax, color=\"red\", markersize=5)\n",
-    "\n",
-    "iso = plt.show()"
+    "pois = get_osm_features(bounding_box, tags)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1dd2764b",
+   "id": "eeac5099",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Intersect the random points with each isochrones stored in the output\n",
-    "intersected_random = intersect_isochrones(output, random_points)\n",
-    "\n",
-    "# Plot the results, with each isochrone in a separate subplot\n",
-    "fig, axes = plt.subplots(ncols=len(cutoffSec), figsize=(15, 10))\n",
-    "\n",
-    "for ax, i in zip(axes, range(len(cutoffSec))):\n",
-    "    output_data = output[output[\"time\"] == cutoffSec[i]]\n",
-    "    intersected_data = intersected_random[intersected_random[\"time\"] == cutoffSec[i]]\n",
-    "\n",
-    "    color = cmap(norm(cutoffSec[i]))\n",
-    "    output_data.plot(ax=ax, color=color, alpha=0.5, legend=True)\n",
-    "\n",
-    "    if not intersected_data.empty:\n",
-    "        intersected_data.plot(ax=axes[i], color=\"red\", markersize=5)\n",
-    "\n",
-    "    # Set consistent bounds for each subplot\n",
-    "    ax.set_xlim(minx, maxx)\n",
-    "    ax.set_ylim(miny, maxy)\n",
-    "\n",
-    "    # Add title to show the time cutoff\n",
-    "    ax.set_title(f\"{cutoffSec[i] / 60:.0f} minutes\")\n",
-    "\n",
-    "plt.tight_layout()\n",
+    "intersected_pois = intersect_isochrones(output, pois.to_crs(\"EPSG:4326\"))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "37c0cfb0",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "intersected_pois = intersected_pois[intersected_pois[\"time\"] == 5400]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f61d518e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "intersected_pois"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "63f5d248",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "fig, ax = plot_with_basemap(output, pois=intersected_pois, zoom=14)\n",
     "plt.show()"
    ]
   }
