feat: added API key parameter when needed, simplified OTP service URL

--- a/example.ipynb
+++ b/example.ipynb
@@ -42,9 +42,7 @@
     "lon = 6.12686\n",
     "cutoffSec = [1800, 3600, 5400]  # 30, 60, 90 minutes\n",
     "date_time = datetime.datetime(2022, 5, 20, 16, 0)\n",
-    "ssl = False\n",
-    "hostname = \"localhost\"\n",
-    "port = 8080\n",
+    "otp_url = f\"http://localhost:8080\"\n",
     "router = \"ara_geneve_graphe_diff_vitesse\"\n",
     "\n",
     "# POI parameters\n",
@@ -135,7 +133,7 @@
    "outputs": [],
    "source": [
     "output = calculate_isochrones(\n",
-    "    lat, lon, cutoffSec, date_time, ssl, hostname, port, router\n",
+    "    lat, lon, cutoffSec, date_time, otp_url, router\n",
     ")"
    ]
   },
