feat: uv tooling added, docker moved to lasur-otp

--- a/example.ipynb
+++ b/example.ipynb
@@ -26,8 +26,7 @@
     "import contextily as ctx\n",
     "\n",
     "\n",
-    "from isochrones.isochrones import calculate_isochrones, intersect_isochrones\n",
-    "from isochrones.pois import get_osm_features"
+    "from isochrones import calculate_isochrones, intersect_isochrones, get_osm_features"
    ]
   },
   {
